# hh_sql_base

./: .gitignore  README.md  pyproject.toml  settertion.py
src/: api_hh.py  manager_base.py  utils_database.py
utils/: main.py
