[tool.poetry]
name = "hh-sql-base"
version = "0.1.0"
description = ""
authors = ["SerKRI <SK@main.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
prettytable = "^3.10.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

